2009/08/06 (TS):
 - lanIpProto.h, lanIpBasic.c: Fix packet size to true ethernet limit;
   separated packet size from rbuf alignment and size. Padding for
   proper alignment is now added to the 'rbuf' data type.
 
   Added 'lanIpBasicAddBufs()' allowing to add buffers at run-time.

   Added 'reference-count' to rbuf and a 'refrbuf()' entry point
   for incrementing the reference-count. 'relrbuf' only really
   releases a buffer when the refcnt reaches zero.
2009/08/06 (TS):
 - drvUdpSock.c: clip transmitted payload to UDPPAYLOADSIZE, not LANPKTMAX!
2009/08/06 (TS):
 - drvAmdEthIpBasic.c: since buffer pointer is adjusted by ETHERPADSZ
   must reduce buffer size by same amount.
2009/08/06 (TS):
 - added 'e1k_lldrv.c' which contains low-level driver entry
   points for intel e1000 chips. The file also implements
   these entry points based on intel's e1000_api.h.
   The driver is derived from 'if_em' (intel).
2009/08/06 (TS):
 - renamed 'drvMveIpBasic.c' -> 'drvGnrIpBasic.c' and created a 
   'low-level driver' API. This allows for re-using this code
   for all NIC drivers that provide the same low-level API as
   the mv64360 (i.e., most recently written drivers by me
   such as the mvme3100's FEC or an e1000 driver based on
   intel's e1000_api.h).
   mv64360-specific entry points are defined in 'mve_lldrv.c'.
2009/07/31 (TS):
 - do not byteswap IP header checksum when inserting (fillinSrcCsumIp()).
2009/07/28 (TS):
 - removed unnecessary inclusion of drvLan9118.h from lanIpBasic.h.
 - silenced some compiler warnings
 - added udpCommJoinMcast(), udpCommLeaveMcast() and udpCommSetIfMcast().
2009/06/26 (TS):
 - added udpCommAllocPacket()
 - added udpCommSendPkt(), udpCommSendPktTo() (BSD only, so far)
 - define UDPCOMM_PKTSZ (max size of payload)
 - Makefile.Host builds a small library with just udpCommBSD
2009/04/21 (TS):
 - udpSockHdrsReflect() needs to convert port number to host endianness
   before passing to fillinSrcCsumUdp().
2009/02/18 (TS):